fixed issue with vertical mis-alignment of footer at bottom of page

--- a/inc/styles.css
+++ b/inc/styles.css
@@ -331,7 +331,7 @@ h4 {
 	margin-left: auto;
 	margin-right: auto;
 	width: 95%;
-	height: 140px;
+	height: 152px;
 	margin-top: -152px;
 	clear: both;
 	max-width: 1600px;
